# Capstone_Design

Capstone1_2021Spring-main/: README.md  function callback_cmdvel_sub(msg)  lua_script_ball.txt
Capstone1_2021Spring-main/ball_detection/: CMakeLists.txt  package.xml
Capstone1_2021Spring-main/ball_detection/src/: ball_detect.cpp  ball_pos_test.cpp
Capstone1_2021Spring-main/coppeliasim_models/: map_ver5_final.ttt  mykinect.ttm  mylidar_hokuyo_ver2.ttm  teamE_robot_ver6_final.ttm  teamE_robot_ver6_longdoor.ttm
Capstone1_2021Spring-main/core_msgs/: CMakeLists.txt
Capstone1_2021Spring-main/core_msgs/msg/: goal_position.msg  line.msg  multiarray.msg
Capstone1_2021Spring-main/data_integrate/: CMakeLists.txt  package.xml
Capstone1_2021Spring-main/data_integrate/launch/: capstone_launch.launch
Capstone1_2021Spring-main/data_integrate/src/: data_integration.cpp  data_show.cpp  path_planner.cpp
Capstone1_2021Spring-main/localization/: CMakeLists.txt  package.xml
Capstone1_2021Spring-main/localization/src/: localization.cpp
Capstone1_2021Spring-main/robot_teleop/: CMakeLists.txt  package.xml
Capstone1_2021Spring-main/robot_teleop/scripts/: prismatic_teleop_key  wheel_teleop_key  wheel_teleop_key_new
